# SEA-HELM

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .trivyignore  README.md  pyproject.toml  requirements.txt  run_evaluation.pbs  run_evaluation.sh  run_evaluation.slurm
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: close-inactive.yaml  pre-commit.yaml
chat_templates/: base_model.jinja
docs/: README.md  cli.md  datasets_and_prompts.md  new_task_guide.md  score_calculations.md  seahelm_folder_structure.md  serving_models.md
elo/: elo_outcomes.py  elo_overrides_template.json  elo_results_loader.py  elo_runner.py  elo_utils.py
helpers/: results_aggregation.ipynb  results_integrity_status.ipynb
seahelm_tasks/: constants.yaml  reasoning_generation_config.yaml  task_config.yaml
seahelm_tasks/code_generation/livecodebench/: config.yaml  livecodebench_dataloader.py  livecodebench_metric.py  test_codes.py
seahelm_tasks/cultural/kalahi/: config.yaml
seahelm_tasks/cultural/kalahi_judge/: config.yaml
seahelm_tasks/english_evals/bbh/: bbh.py  bbh_dataloader.py  config.yaml
seahelm_tasks/english_evals/gpqa/: config.yaml  gpqa_dataloader.py
seahelm_tasks/english_evals/ifeval/: config.yaml  ifeval.py  ifeval_dataloader.py  instructions.py  instructions_registry.py  utils.py
seahelm_tasks/english_evals/math_arena/: config.yaml  math_arena_dataloader.py
seahelm_tasks/english_evals/math_hard/: config.yaml  math_hard_dataloader.py
seahelm_tasks/english_evals/mmlu_pro/: config.yaml  mmlu_pro_dataloader.py
seahelm_tasks/english_evals/mmlu_redux/: config.yaml  mmlu_redux_dataloader.py
seahelm_tasks/english_evals/musr/: config.yaml  musr_dataloader.py
seahelm_tasks/english_evals/supergpqa/: config.yaml  supergpqa_dataloader.py  supergpqa_metric.py
seahelm_tasks/health/healthbench/: config.yaml  healthbench_dataloader.py  healthbench_judge_metric.py
seahelm_tasks/instruction_following/ifeval/: config.yaml  if_eval.py  instruction_checkers.py
seahelm_tasks/instruction_following/maxifeval/: README.md  config.yaml  instruction_checkers.py  instruction_registry.py  maxifeval.py  prompt_response_utils.py
seahelm_tasks/knowledge/global_mmlu/: global_mmlu_dataloader.py
seahelm_tasks/knowledge/global_mmlu_lite/: config.yaml  global_mmlu_lite_dataloader.py  global_mmlu_lite_en_dev.jsonl  global_mmlu_lite_en_test.jsonl  global_mmlu_lite_id_dev.jsonl  global_mmlu_lite_id_test.jsonl  global_mmlu_lite_ms_dev.jsonl  global_mmlu_lite_ms_test.jsonl  global_mmlu_lite_my_dev.jsonl  global_mmlu_lite_my_test.jsonl  global_mmlu_lite_tl_dev.jsonl  global_mmlu_lite_tl_test.jsonl  global_mmlu_lite_vi_dev.jsonl  global_mmlu_lite_vi_test.jsonl  global_mmlu_lite_zh_dev.jsonl  global_mmlu_lite_zh_test.jsonl
seahelm_tasks/knowledge/thai_exam/: config.yaml  thai_exam_dataloader.py
seahelm_tasks/lindsea/pragmatics/: config.yaml  pragmatic_dataloader.py  pragmatic_reasoning.py
seahelm_tasks/lindsea/syntax/: config.yaml  minimal_pairs.py
seahelm_tasks/lindsea/syntax_criteria/: config.yaml  lindsea_judge_metric.py
seahelm_tasks/long_context/AA-LCR/: aa_lcr_dataloader.py  aa_lcr_metric.py  config.yaml
seahelm_tasks/multi_turn/mt_bench/: config.yaml
seahelm_tasks/multi_turn/mt_bench_judge/: config.yaml  mtbench_judge_dataloader.py  mtbench_judge_metric.py
seahelm_tasks/nlg/abstractive_summarization/: config.yaml  summarization.py
seahelm_tasks/nlg/translation/: config.yaml  translation_dataloader.py  translation_judge.py  translation_metric.py
seahelm_tasks/nlr/causal/: config.yaml
seahelm_tasks/nlr/nli/: config.yaml
seahelm_tasks/nlu/belebele_mcqa/: config.yaml
seahelm_tasks/nlu/idiom/: config.yaml
seahelm_tasks/nlu/metaphor/: config.yaml
seahelm_tasks/nlu/novel_question_answering/: config.yaml
seahelm_tasks/nlu/paraphrase_identification/: config.yaml
seahelm_tasks/nlu/question_answering/: config.yaml
seahelm_tasks/nlu/question_answering_mc/: config.yaml
seahelm_tasks/nlu/sentiment_analysis/: config.yaml
seahelm_tasks/safety/toxicity_detection/: config.yaml
seahelm_tasks/vision/MMMU_Pro/: config.yaml  mmmu_pro_dataloader.py
seahelm_tasks/vision/babyvision/: babyvision_dataloader.py  babyvision_metric.py  config.yaml
seahelm_tasks/vision/cvqa/: config.yaml  cvqa_dataloader.py
seahelm_tasks/vision/erqa/: config.yaml  erqa_dataloader.py
seahelm_tasks/vision/hallusionbench/: config.yaml  hallusionbench_dataloader.py
seahelm_tasks/vision/marvl/: config.yaml  marvl_dataloader.py
seahelm_tasks/vision/mathvision/: config.yaml  mathvision_dataloader.py  mathvision_metric.py
seahelm_tasks/vision/mathvista/: config.yaml  mathvista_dataloader.py
seahelm_tasks/vision/mmstar/: config.yaml  mmstar_dataloader.py
seahelm_tasks/vision/world_cuisine/: config.yaml  world_cuisine_dataloader.py
seahelm_tasks/vision/xm3600/: config.yaml  refclipscore_judge.py  refclipscore_metric.py  xm3600_dataloader.py
src/: aggregate_metrics.py  base_logger.py  collect_env.py  queue_manager.py  seahelm_evaluation.py  task_config.py  utils.py
src/dataloaders/: base_dataloader.py  huggingface_audio_dataloader.py  huggingface_dataloader.py  huggingface_image_dataloader.py  seahelm_local_dataloader.py
src/dataloaders/judges/: criteria_dataloader.py  judge_dataloader.py  pairwise_dataloader.py
src/inference_strategy/: __init__.py  base_model_inference_strategy.py  batched_inference_strategy.py  default_inference_strategy.py  logprobs_inference_strategy.py  utils.py
src/judges/: criteria_judge.py  pairwise_judge.py  seahelm_judge.py
src/metrics/: f1_acc_metric.py  logprob_metric.py  math_metric.py  question_answering.py  seahelm_metric.py
src/metrics/llm_judges/: criteria_judge_metric.py  (+3 more)
src/rouge_score/: README.md  __init__.py  io.py  requirements.txt  rouge.py  rouge_scorer.py  scoring.py  stemmers.py  tokenization_wrapper.py  tokenizers.py
src/sandbox/: __init__.py  base_sandbox.py  docker_sandbox.py  enroot_sandbox.py  podman_sandbox.py  singularity_sandbox.py
src/serving/: __init__.py
(+1482 files in other folders)
